Vercel, why no support vite proxy >:(

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Mostpaster",
-	"name": "Mostpaster: Parcel tracking made mostly pasting",
+	"name": "Mostpaster: NZ parcel tracking made mostly pasting",
 	"icons": [
 		{
 			"src": "/icon.png",
